--- a/fabric-samples/asset-transfer-basic/backend-service/package.json
+++ b/fabric-samples/asset-transfer-basic/backend-service/package.json
@@ -1,19 +1,19 @@
 {
-    "name": "asset-transfer-basic",
+    "name": "backend",
     "version": "1.0.0",
-    "description": "Asset-transfer-basic application implemented in JavaScript",
+    "description": "sample",
     "engines": {
         "node": ">=14.14",
         "npm": ">=6"
     },
     "scripts": {
-        "start": "node index.js",
-        "dev": "nodemon backend.js"
+        "dev": "nodemon server.js"
     },
     "engineStrict": true,
     "author": "Hyperledger",
     "license": "Apache-2.0",
     "dependencies": {
+        "axios": "^1.6.8",
         "express": "^4.17.1",
         "fabric-ca-client": "^2.2.19",
         "fabric-network": "^2.2.19",
