--- a/fabric-samples/test-network/organizations/ccp-template.yaml
+++ b/fabric-samples/test-network/organizations/ccp-template.yaml
@@ -23,6 +23,14 @@ peers:
     grpcOptions:
       ssl-target-name-override: peer0.org${ORG}.example.com
       hostnameOverride: peer0.org${ORG}.example.com
+orderers:
+  orderer.example.com:
+    url: grpc://localhost:${O0PORT}
+    tlsCACerts:
+      pem: |
+          ${ORDERERPEM}
+    grpcOptions:
+      ssl-target-name-override: orderer.example.com
 certificateAuthorities:
   ca.org${ORG}.example.com:
     url: https://localhost:${CAPORT}
